Refactoring + use estimated or exact row count based on whether the search was using full-text matching